cmake_minimum_required(VERSION 3.10)
project(CPP_Portfolio)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Add subdirectories for each category
add_subdirectory(01_basic_programming)
add_subdirectory(02_object_oriented_programming)
add_subdirectory(03_data_structures)
add_subdirectory(04_advanced_topics)
add_subdirectory(05_projects)