# Object-Oriented Programming Projects

# Automobile Inheritance
add_executable(automobile_inheritance 
    automobile_inheritance/Automobile.cpp
    automobile_inheritance/Car.cpp
    automobile_inheritance/SUV.cpp
    automobile_inheritance/Truck.cpp
    automobile_inheritance/Program\ 15-6.cpp)

# Exception Handling
add_executable(exception_handling
    exception_handling/Car.cpp
    exception_handling/CarMain.cpp)

# Generic Classes
add_executable(generic_classes
    generic_classes/Source.cpp)

# Student Management
add_executable(student_management
    student_management/Date.cpp
    student_management/MyString.cpp
    student_management/PhoneNumber.cpp
    student_management/Student.cpp
    student_management/StudentList.cpp
    student_management/Source.cpp)

# Stock Management
add_executable(stock_management
    stock_management/Stock.cpp
    stock_management/StockBroker.cpp
    stock_management/StockPurchase.cpp
    stock_management/StockSold.cpp
    stock_management/StockTransaction.cpp
    stock_management/stockMain.cpp)

# Geometric Shapes
add_executable(geometric_shapes
    geometric_shapes/Circle.cpp
    geometric_shapes/Cylinder.cpp
    geometric_shapes/Sphere.cpp
    geometric_shapes/lab07.cpp)

# Employee Hierarchy
add_executable(employee_hierarchy
    employee_hierarchy/Date.cpp
    employee_hierarchy/Employee.cpp
    employee_hierarchy/ProductionWorker.cpp
    employee_hierarchy/TeamLeader.cpp
    employee_hierarchy/Main.cpp)

# Rational Number
add_executable(rational_number
    rational_number/RationalNumber.cpp
    rational_number/RationalNumberMain.cpp)

# Car Dealership
add_executable(car_dealership
    car_dealership/Car.cpp
    car_dealership/Dealership.cpp
    car_dealership/lab06.cpp)

# Date Class
add_executable(date_class
    date_class/_Date.cpp
    date_class/Source.cpp)

# Feet Inches
add_executable(feet_inches
    feet_inches/FeetInches.cpp
    feet_inches/FeetInchesMain.cpp)